Revert "Merge remote-tracking branch 'upstream/master'"
This reverts commit 7a0e3dada30853d11fa55fbbac568b03fb6a5561, reversing
changes made to 98dfcd59f647595ab0e9d92ad22d5ef58d7e5c65.

--- a/tests/config/mongodb/ecommerce.yaml
+++ b/tests/config/mongodb/ecommerce.yaml
@@ -26,7 +26,7 @@ types:
     properties:
       name: ~
       description: ~
-      image: { range: http://schema.org/ImageObject }
+      image: { range: ImageObject }
       additionalType: ~
   Product:
     properties:
@@ -43,15 +43,15 @@ types:
       gtin8: ~
       mpn: ~
       color: ~
-      depth: { range: 'http://schema.org/Text' }
-      height: { range: 'http://schema.org/Text' }
-      weight: { range: 'http://schema.org/Text' }
-      width: { range: 'http://schema.org/Text' }
-      seller: { range: 'http://schema.org/Seller' }
+      depth: { range: 'Text' }
+      height: { range: 'Text' }
+      weight: { range: 'Text' }
+      width: { range: 'Text' }
+      seller: { range: 'Seller' }
   Brand:
-    parent: 'http://schema.org/Thing'
+    parent: 'Thing'
     properties:
-      logo: { range: 'http://schema.org/ImageObject' }
+      logo: { range: 'ImageObject' }
   Seller:
     parent: false
     guessFrom: Person
@@ -73,11 +73,11 @@ types:
       availabilityStarts: ~
       availabilityEnds: ~
       availableDeliveryMethod: ~
-      category: { range: 'http://schema.org/Text' }
+      category: { range: 'Text' }
       deliveryLeadTime: ~
       inventoryLevel: ~
       itemCondition: ~
-      price: { range: http://schema.org/Number }
+      price: { range: Number }
       priceCurrency: ~
       validFrom: ~
       validThrough: ~
