--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,51 @@
 language: php
 
+sudo: false
+
 cache:
   directories:
     - $HOME/.composer/cache
 
 matrix:
   include:
-    - php: '8.0'
+    - php: '7.1'
+    - php: '7.2'
       env: coverage=1 lint=1
-    - php: '7.4'
+    - php: '7.2'
+      env: deps='low'
 
 before_install:
   - phpenv config-rm xdebug.ini || echo "xdebug not available"
   - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - export PATH="$PATH:$HOME/.composer/vendor/bin"
+  - wget https://phar.phpunit.de/phpunit-6.5.phar
+  - composer global require humbug/php-scoper:dev-master#674e24d2b9e90b2f629dab7f30d5070e4d49d815
   - if [[ $coverage = 1 ]]; then mkdir -p build/logs; fi
-  - if [[ $coverage = 1 ]]; then wget https://github.com/satooshi/php-coveralls/releases/download/v2.4.3/php-coveralls.phar; fi
-  - wget -O box.phar https://github.com/humbug/box/releases/download/3.11.1/box.phar
-  - export BOX_BIN=$(pwd)/box.phar
+  - if [[ $coverage = 1 ]]; then wget https://github.com/satooshi/php-coveralls/releases/download/v2.0.0/php-coveralls.phar; fi
+  - if [[ $lint = 1 ]]; then wget https://github.com/FriendsOfPHP/PHP-CS-Fixer/releases/download/v2.10.0/php-cs-fixer.phar; fi
+  - if [[ $lint = 1 ]]; then composer global require --dev 'phpstan/phpstan:^0.8'; fi
+  - if [[ ! $deps && $TRAVIS_PHP_VERSION = "7.2" ]]; then curl -LSs https://box-project.github.io/box2/installer.php | php; fi;
 
 install:
-  - if [[ $coverage = 1 ]]; then composer require --dev --no-update 'phpunit/php-code-coverage:^9.2'; fi
-  - if [[ ! $deps && $TRAVIS_PHP_VERSION = "8.0" ]]; then composer install --prefer-dist --no-progress --no-suggest --ansi; fi
-  - if [[ $TRAVIS_PHP_VERSION != "8.0" ]]; then composer update --prefer-stable --prefer-dist --no-progress --no-suggest --ansi; fi
+  - if [[ $coverage = 1 ]]; then composer require --dev --no-update 'phpunit/php-code-coverage:^5.3'; fi
+  - if [[ ! $deps ]]; then composer update --prefer-dist --no-progress --no-suggest --ansi; fi
   - if [[ $deps = 'low' ]]; then composer update --prefer-dist --no-progress --no-suggest --prefer-stable --prefer-lowest --ansi; fi
 
 script:
-  - if [[ $coverage = 1 ]]; then phpdbg -qrr vendor/bin/simple-phpunit --coverage-clover build/logs/clover.xml; else vendor/bin/simple-phpunit; fi
-  - if [[ $lint = 1 ]]; then vendor/bin/php-cs-fixer fix --dry-run --diff --no-ansi; fi
-  - if [[ $lint = 1 ]]; then vendor/bin/phpstan analyse; fi
-  - if [[ ! $deps && $TRAVIS_PHP_VERSION = "8.0" ]]; then ./bin/compile; fi
+  - if [[ $coverage = 1 ]]; then phpdbg -qrr phpunit-6.3.phar --coverage-clover build/logs/clover.xml; else php phpunit-6.5.phar; fi
+  - if [[ $lint = 1 ]]; then php php-cs-fixer.phar fix --dry-run --diff --no-ansi; fi
+  - if [[ $lint = 1 ]]; then phpstan analyse -l5 --ansi src; fi
+  - |
+    if [[ ! $deps && $TRAVIS_PHP_VERSION = "7.2" ]]; then
+      composer install --no-dev --prefer-dist --classmap-authoritative --no-progress --no-suggest --ansi;
+      ~/.composer/vendor/bin/php-scoper add-prefix --output-dir=build/schema-generator;
+      composer --working-dir=build/schema-generator dump-autoload --classmap-authoritative --no-dev;
+      php -d phar.readonly=0 box.phar build;
+      php schema.phar generate-types tmp/ tests/e2e/schema.yml;
+      diff tests/e2e/src/AppBundle/Entity/Person.php tmp/AppBundle/Entity/Person.php;
+      diff tests/e2e/src/AppBundle/Entity/PostalAddress.php tmp/AppBundle/Entity/PostalAddress.php;
+      diff tests/e2e/src/AppBundle/Entity/Thing.php tmp/AppBundle/Entity/Thing.php;
+    fi;
 
 after_success:
   - if [[ $coverage = 1 ]]; then travis_retry php php-coveralls.phar; fi
@@ -43,5 +59,5 @@ deploy:
   on:
     tags: true
     repo: api-platform/schema-generator
-    php:  '8.0'
+    php:  '7.2'
     condition: "! $deps"
