--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "description": "Various tools to generate a data model based on Schema.org vocables",
     "keywords": ["schema.org", "semantic", "model", "doctrine", "symfony", "entity", "enum"],
-    "homepage": "https://api-platform.com/docs/schema-generator/",
+    "homepage": "https://api-platform.com",
     "license": "MIT",
     "authors": [
         {
@@ -18,30 +18,26 @@
         "psr-4": { "ApiPlatform\\SchemaGenerator\\Tests\\": "tests/" }
     },
     "require": {
-        "php": ">=7.4",
+        "php": ">=7.1",
+        "doctrine/inflector": "^1.0",
+        "easyrdf/easyrdf": "^0.9",
         "ext-json": "*",
-        "doctrine/inflector": "^1.4.3 || ^2.0",
-        "easyrdf/easyrdf": "^1.1",
-        "friendsofphp/php-cs-fixer": "^2.15",
-        "league/html-to-markdown": "^4.9",
+        "friendsofphp/php-cs-fixer": "^2.10",
+        "league/html-to-markdown": "^4.0",
         "psr/log": "^1.0",
-        "symfony/config": "^5.2",
-        "symfony/console": "^5.2",
-        "symfony/yaml": "^5.2",
-        "symfony/filesystem": "^5.2",
-        "twig/twig": "^3.0"
+        "symfony/config": "^3.3 || ^4.0",
+        "symfony/console": "^2.7 || ^3.0 || ^4.0",
+        "symfony/yaml": "^2.7 || ^3.0 || ^4.0",
+        "twig/twig": "^1.35 || ^2.0"
     },
     "require-dev": {
-        "api-platform/core": "^2.5",
-        "doctrine/orm": "^2.7",
-        "myclabs/php-enum": "^1.7",
-        "symfony/doctrine-bridge": "^5.2",
-        "symfony/phpunit-bridge": "^5.2",
-        "symfony/serializer": "^5.2",
-        "symfony/validator": "^5.2",
-        "phpspec/prophecy-phpunit": "^2.0",
-        "phpstan/phpstan": "^0.12"
+        "api-platform/core": "^2.0",
+        "doctrine/orm": "^2.2",
+        "myclabs/php-enum": "^1.0",
+        "symfony/doctrine-bridge": "^2.7 || ^3.0 || ^4.0",
+        "symfony/filesystem": "^2.7 || ^3.0 || ^4.0",
+        "symfony/serializer": "^2.7 || ^3.0 || ^4.0",
+        "symfony/validator": "^2.7 || ^3.0 || ^4.0"
     },
-    "bin": ["bin/schema"],
-    "minimum-stability": "dev"
+    "bin": ["bin/schema"]
 }
