--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,15 +3,9 @@
 <!-- http://phpunit.de/manual/4.1/en/appendixes.configuration.html -->
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.6/phpunit.xsd"
-         bootstrap="vendor/autoload.php"
+         bootstrap="tests/bootstrap.php"
          backupGlobals="false"
          colors="true">
-    <php>
-        <server name="SYMFONY_PHPUNIT_VERSION" value="9" />
-        <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
-        <server name="SYMFONY_DEPRECATIONS_HELPER" value="max[direct]=0" />
-    </php>
-
     <testsuites>
         <testsuite name="Project Test Suite">
             <directory>tests</directory>
@@ -20,7 +14,11 @@
 
     <filter>
         <whitelist>
-            <directory>src</directory>
+            <directory>.</directory>
+            <exclude>
+                <directory>tests</directory>
+                <directory>vendor</directory>
+            </exclude>
         </whitelist>
     </filter>
 </phpunit>
